apps/worker/podinfo/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.tailscale-k8s.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 9898
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podinfo.tailscale-k8s.hephy.pro
    secretName: podinfo-tls
